--- a/shinobi/style.css
+++ b/shinobi/style.css
@@ -11,6 +11,7 @@ body {
 #changeBG {
   background-image: url("assets/black.png");
   background-size: cover;
+  background-repeat: no-repeat;
   }
 *,
 *:before,
