--- a/shinobi/style.css
+++ b/shinobi/style.css
@@ -15,6 +15,22 @@ body {
   -o-background-size: cover;
   background-size: cover;
   }
+  
+#preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  background: #333 url('assets/preloader.gif') no-repeat center center;
+}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 
 .animated {
   -webkit-animation-duration: 1.5s;
